--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "helmet": "3.14.0",
     "html-to-text": "4.0.0",
     "jasmine-core": "3.1.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jszip": "3.1.5",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "lusca": "1.6.1",
     "method-override": "2.3.10",
     "mocha": "5.2.0",
