--- a/development.env
+++ b/development.env
@@ -9,7 +9,7 @@ MONGO_SEED=true
 MONGO_SEED_LOG_RESULTS=true
 
 # URI for the host of the application
-DOMAIN=http://localhost:3000
+DOMAIN=https://localhost:3000
 
 # whether the app should be running in production mode - this affects whether development accounts are created
 # and how the admin password is set
@@ -30,11 +30,11 @@ NEXMO_API_SECRET=abc123abc123
 NEXMO_FROM_NUMBER=12505555555
 
 # default credentials for local dev accounts - won’t be used in production
-DEV_ADMIN_PWD=JH3XN':EV-W6=qWm
-DEV_USER_PWD=\:E9_`jMG%-^np4`
-DEV_DEV_PWD=9EygZf34NzM5X^vs
-DEV_DEV2_PWD=(Pp}f]f6T8q,UzyA
-DEV_GOV_PWD={uL`b~4wv*NM\T3H
+DEV_ADMIN_PWD=admin
+DEV_USER_PWD=admin
+DEV_DEV_PWD=admin
+DEV_DEV2_PWD=admin
+DEV_GOV_PWD=admin
 
 ALLOW_EDIT_CAPS=true
 
