--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "simple-line-icons": "^2.4.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
+    "stripe": "^7.8.0",
     "tinymce": "^4.8.3",
     "ui-bootstrap4": "^3.0.5",
     "ui-cropper": "^1.0.7",
