--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "compression": "1.7.3",
     "connect-flash": "0.1.1",
     "connect-mongo": "^2.0.3",
-    "cookie-parser": "1.4.3",
+    "cookie-encryption": "^1.7.0",
+    "cookie-parser": "^1.4.4",
     "dependency-check": "3.2.1",
     "express": "4.16.4",
     "express-hbs": "^1.0.4",
@@ -82,6 +83,7 @@
     "phantomjs-prebuilt": "2.1.16",
     "popper.js": "^1.14.4",
     "replace-ext": "1.0.0",
+    "samlify": "^2.6.1",
     "serve-favicon": "2.5.0",
     "simple-line-icons": "^2.4.1",
     "socket.io": "^2.1.1",
