--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "start": "node server-dist/server.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "@uirouter/angularjs": "^1.0.20",
     "acl": "0.4.11",
     "angular": "^1.7.5",
@@ -44,8 +44,7 @@
     "compression": "1.7.3",
     "connect-flash": "0.1.1",
     "connect-mongo": "^2.0.3",
-    "cookie-encryption": "^1.7.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "1.4.3",
     "dependency-check": "3.2.1",
     "express": "4.16.4",
     "express-hbs": "^1.0.4",
@@ -56,18 +55,18 @@
     "helmet": "3.14.0",
     "html-to-text": "4.0.0",
     "jasmine-core": "3.1.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.3.1",
     "jszip": "3.1.5",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.11",
     "lusca": "1.6.1",
     "method-override": "2.3.10",
     "mocha": "5.2.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
-    "mongoose": "^5.7.1",
+    "mongoose": "^5.4.0",
     "morgan": "1.9.1",
     "multer": "1.4.1",
-    "nexmo": "^2.4.2",
+    "nexmo": "^2.4.0",
     "ng-currency": "^1.2.5",
     "ng-file-upload": "^12.2.13",
     "ng-idle": "^1.3.2",
@@ -78,22 +77,20 @@
     "passport": "0.4.0",
     "passport-github": "1.1.0",
     "passport-local": "1.0.0",
-    "passport-saml": "^1.2.0",
-    "pdfmake": "^0.1.60",
+    "pdfmake": "^0.1.40",
     "phantomjs-prebuilt": "2.1.16",
     "popper.js": "^1.14.4",
     "replace-ext": "1.0.0",
     "samlify": "^2.6.1",
     "serve-favicon": "2.5.0",
     "simple-line-icons": "^2.4.1",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "stripe": "^7.9.1",
-    "tinymce": "^4.9.6",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "tinymce": "^4.8.3",
     "ui-bootstrap4": "^3.0.5",
     "ui-cropper": "^1.0.7",
     "validator": "10.5.0",
-    "webpack-dev-middleware": "^3.7.1",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
     "winston": "^2.4.4"
   },
@@ -101,10 +98,10 @@
     "@babel/core": "~7.1.2",
     "@babel/plugin-proposal-class-properties": "~7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "~7.0.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "~7.1.0",
     "@babel/preset-typescript": "~7.1.0",
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.2.0",
     "@types/acl": "^0.4.35",
     "@types/angular": "^1.6.52",
     "@types/angular-breadcrumb": "^0.4.22",
@@ -124,20 +121,20 @@
     "@types/html-to-text": "^1.4.31",
     "@types/jquery": "^3.3.22",
     "@types/jszip": "^3.1.4",
-    "@types/lodash": "^4.14.139",
+    "@types/lodash": "^4.14.118",
     "@types/lusca": "^1.5.0",
     "@types/method-override": "^0.0.31",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.10",
-    "@types/mongoose": "^5.5.17",
+    "@types/mongoose": "^5.3.3",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/ng-file-upload": "^12.2.2",
-    "@types/node-fetch": "^2.5.2",
+    "@types/node-fetch": "^2.1.4",
     "@types/nodemailer": "^4.6.5",
     "@types/owasp-password-strength-test": "^1.3.0",
-    "@types/passport": "^1.0.1",
-    "@types/passport-github": "^1.1.5",
+    "@types/passport": "^0.4.7",
+    "@types/passport-github": "^1.1.3",
     "@types/passport-local": "^1.0.33",
     "@types/pdfmake": "^0.1.3",
     "@types/serve-favicon": "^2.2.30",
