--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "compression": "1.7.3",
     "connect-flash": "0.1.1",
     "connect-mongo": "^2.0.3",
-    "cookie-parser": "1.4.3",
+    "cookie-encryption": "^1.7.0",
+    "cookie-parser": "^1.4.3",
     "dependency-check": "3.2.1",
     "express": "4.16.4",
     "express-hbs": "^1.0.4",
